<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#A0FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/profile_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#99141414"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="@string/profile_hint"
        android:text="@string/profile_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_logout" />

</LinearLayout>