<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#A0FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SignupFragment">

    <TextView
        android:id="@+id/Login_textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#99141414"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="@string/title_signup"
        android:text="@string/title_signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="20dp"
            android:text="@string/prompt_username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="Username"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="20dp"
            android:text="@string/prompt_password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:singleLine="true"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="80dp"
            android:text="@string/prompt_phone_num"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/prompt_phone_num"
            android:inputType="phone"
            android:minHeight="48dp"
            android:singleLine="true"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize,TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_up"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_up_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_to_login_label" />

        <Button
            android:id="@+id/goto_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_login" />
    </LinearLayout>

</LinearLayout>